--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
   width: 960px;
   height: 500px;
   position: relative;
+  padding-left: 15px;
 }
 
 #my-mood {
@@ -14,18 +15,20 @@ body {
   color: inherit;
 }
 
-svg {
+.md-toolbar-text {
+  text-align: center;
+}
+
+
+/* conical image https://leaverou.github.io/conic-gradient/*/
+
+.svg-mood-map-chart {
   /*background-color: #eee;*/
-  background: red;
-  /* For browsers that do not support gradients */
-  background: -webkit-linear-gradient(rgb(142, 193, 169), rgb(237, 245, 212));
-  /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(rgb(142, 193, 169), rgb(237, 245, 212));
-  /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(rgb(142, 193, 169), rgb(237, 245, 212));
-  /* For Firefox 3.6 to 15 */
-  background: linear-gradient(rgb(142, 193, 169), rgb(237, 245, 212));
-  /* Standard syntax */
+  background-image: url('bg.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100% 100%;
+  border-radius: 50%
 }
 
 svg text {
@@ -41,6 +44,23 @@ svg text {
   fill: none;
   stroke: #999;
 }
+
+.y_axis path,
+.y_axis line {
+  fill: none;
+  stroke: #999;
+}
+
+.y_axis text {
+  fill: black;
+}
+
+
+/*
+.axis text {
+  fill: rgb(169, 178, 189);
+}
+*/
 
 .tick {
   font: 10px sans-serif;
@@ -69,7 +89,7 @@ div .chart {
 
 focus_text {
   font: 10px sans-serif;
-  fill: rgb(50, 107, 132);
+  fill: #757575;
 }
 
 .focus_circle {
@@ -132,7 +152,7 @@ md-button .bar_chart {
   padding: 3px;
   margin-top: -20px;
   font: 10px sans-serif;
-  background: #ddd;
+  background: #757575;
   pointer-events: none;
   border-radius: 2px;
   color: #fff;
@@ -147,7 +167,7 @@ md-button .bar_chart {
   font-size: 11;
   width: 100%;
   line-height: 1;
-  color: #ddd;
+  color: #757575;
   content: "\25bc";
   position: absolute;
   text-align: center;
@@ -180,4 +200,33 @@ md-button .bar_chart {
 
 .svg_chart_reflection text {
   fill: white;
+}
+
+
+/*
+* discret emotions
+* ---------------------------
+*/
+
+._md-slider-wrapper canvas {
+  display: none;
+}
+
+md-tooltip {
+  font: 10px sans-serif;
+  padding: 0px;
+  margin: 0px;
+}
+
+md-tooltip .md-content {
+  text-align: center;
+  width: 60px;
+  height: 12px;
+  padding: 3px;
+  margin-top: -20px;
+  font: 10px sans-serif;
+  background: #757575;
+  pointer-events: none;
+  border-radius: 2px;
+  color: #fff;
 }
